[project]
name = "openpodcast-tts"
version = "0.1.0"
description = "Openpodcast TTS pipeline"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.14.0",
    "pydub>=0.25.1",
    "numpy>=2.0.0",
    "python-dotenv>=1.1.0",
    "google-cloud-texttospeech>=2.35.0"
]

[project.scripts]
openpodcast = "openpodcast_tts.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openpodcast_tts"]
